// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshot 1`] = `
<PaymentTerms
  canProceedToPayment={true}
  communityName="Monterey Pines Apartments"
  goToPayment={[MockFunction]}
  handleClickBack={[MockFunction]}
  holdingDepositAmount={500}
  leaseStartDate="2020-10-30"
  unitNumber="24"
/>
`;

exports[`Matches snapshot when reagreeing 1`] = `
<PaymentTerms
  canProceedToPayment={true}
  communityName="Monterey Pines Apartments"
  goToPayment={[MockFunction]}
  handleClickBack={[MockFunction]}
  holdingDepositAmount={500}
  isReagreeing={true}
  leaseStartDate="2020-10-30"
  reagree={[Function]}
  unitNumber="24"
/>
`;
